# meeting-assistant

./: .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  cleanup.sh  setup.sh  start.sh  transcript_generator.sh
docs/: CONTINUOUS_ARCHITECTURE_SUMMARY.md  CONTINUOUS_AUDIO_PROCESSING.md  CONTINUOUS_MEETING_ARCHITECTURE.md  DIARIZATION_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  MEETING_EXPORT_GUIDE.md  MEETING_STORAGE.md  OLLAMA_PROVIDER_FIXES.md  PLUGIN_SYSTEM.md  PROJECT_SUMMARY.md  RUST_NATIVE_DIARIZATION_GUIDE.md  TRANSCRIPT_GENERATION.md  TRANSCRIPT_GENERATOR_README.md  TRANSCRIPT_INTERACTIVE_USAGE.md  UI_IMPROVEMENTS.md
scripts/: transcript_generator.rs  whisper_pyannote_helper.py
src/: ai.rs  audio.rs  config.rs  continuous_audio.rs  continuous_main.rs  continuous_types.rs  input.rs  lib.rs  main.rs  meeting_recorder.rs  plugin_system.rs  setup.rs  system.rs  types.rs  ui.rs
src/plugins/: advanced_diarization.rs  mod.rs  ollama_provider.rs  rust_native_diarization.rs  sentiment_analyzer.rs  stt_post_processor.rs  transcript_interactive.rs
tests/: test_continuous_meeting.sh  test_diarization.rs  test_diarization_debug.py  test_diarization_fixed.sh  test_diarize.txt  test_diarize_latest.sh  test_enhanced_audio_quality.sh  test_meeting_export.sh  test_meeting_storage.sh  test_ollama.sh  test_rust_diarization.sh  test_stt_plugin.sh  test_transcript_generation.sh  test_transcript_generator.sh
